--- a/app1/knote.yaml
+++ b/app1/knote.yaml
@@ -1,3 +1,15 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: knote
+spec:
+  selector:
+    app: knote
+  ports:
+    - port: 80
+      targetPort: 3000
+  type: LoadBalancer
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -13,7 +25,7 @@ spec:
         app: knote
     spec:
       containers:
-        - name: app
+        - name: knote
           image: learnk8s/knote-js:1.0.0
           ports:
             - containerPort: 3000
